# openvalify

./: CMakeLists.txt  README.md
include/openvalify/: OpenValify.h  logging.h
src/OpenValifyCli/: CMakeLists.txt  main.cpp
src/lib/: OpenValify.cpp
